--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,37 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Add this to your GitHub repository
+# For Vercel to automatically deploy on git push
 
-# IDE and editors
-.idea/
-.vscode/
+# Vercel Configuration
+.vercel
 
-# Dependencies
-node_modules/
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# Testing
-/coverage
-
-# Next.js
-/.next/
-/out/
-next-env.d.ts
-*.tsbuildinfo
-
-# Production builds
-/build
-dist/
-dist
-
-# Environment files (comprehensive coverage)
-
-*token.json*
-*credentials.json*
-
-# Logs and debug files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-dump.rdb
-
-# System files
-.DS_Store
-*.pem
+# Environment variables (keep secure)
+.env
+.env.local
+.env.production
 
 # Python
 __pycache__/
-*pyc*
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
 venv/
-.venv/
+ENV/
 
-# Development tools
-chainlit.md
-.chainlit
-.ipynb_checkpoints/
-.ac
+# Logs
+*.log
 
-# Deployment
-.vercel
+# Database
+*.db
+*.sqlite3
 
-# Data and databases
-agenthub/agents/youtube/db
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Archive files and large assets
-**/*.zip
-**/*.tar.gz
-**/*.tar
-**/*.tgz
-*.pack
-*.deb
-*.dylib
-
-# Build caches
-.cache/
-
-# Mobile development
-android-sdk/ frontend/node_modules/.cache/default-development/0.pack
-frontend/node_modules/.cache/default-development/0.pack
+# OS
+.DS_Store
+Thumbs.db
